<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:overScrollMode="never">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?actionBarSize"
                android:background="@color/light_grey"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/tv_playlist_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Emotional Well-being a Healing Practices for Children"
                    android:textColor="@color/black"
                    android:textSize="@dimen/playlist_title" />

                <TextView
                    android:id="@+id/tv_playlist_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLines="5"
                    tools:text="In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey. "
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/main_text_size" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="1dp"
                app:popupTheme="@style/Theme.MaterialComponents.NoActionBar.Bridge">

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon_back"
                    android:src="@drawable/ic_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/back"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/playlists"
                    android:textColor="@color/red"
                    android:textSize="21sp" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/main_margin_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_video_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:textSize="13sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/playlist_videos_item" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin_horizontal"
        android:backgroundTint="@color/red"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        app:maxImageSize="35dp"
        android:contentDescription="@string/button_play" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>