<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/main_margin_horizontal"
    android:keepScreenOn="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?actionBarSize"
                android:background="@color/light_grey"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main.toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    android:elevation="1dp"
                    app:popupTheme="@style/Theme.MaterialComponents.NoActionBar.Bridge">

                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:drawablePadding="5dp"
                        android:text="@string/back"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/playlists"
                        android:textColor="@color/red"
                        android:textSize="21sp" />

                </androidx.appcompat.widget.Toolbar>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/main_margin_horizontal"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Emotional Well-being a Healing Practices for Children"
                android:textColor="@color/black"
                android:textSize="@dimen/playlist_title" />

            <Button
                android:layout_width="141dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_download_bg"
                android:drawableEnd="@drawable/ic_download"
                android:padding="8dp"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="@dimen/main_text_size" />

            <TextView
                android:id="@+id/tv_video_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8dp"
                tools:text="Refugee children often have suffered many losses and because of that, they are grieving these losses they're grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they're going to have sadness. Refugee children often have suffered many losses and because of that, they are grieving these losses they're grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they're going to have sadness. Refugee children often have suffered many losses and because of that, they are grieving these losses they're grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they're going to have sadness. In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey. "
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/main_text_size" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>